feat: map of resources

--- a/The Get Down/index.html
+++ b/The Get Down/index.html
@@ -11,14 +11,18 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="images/logo-png_1.png" type="image/png" />
+    <link
+      rel="icon"
+      href="/The Get Down/Images/logo-png_1.png"
+      type="image/png"
+    />
   </head>
   <body>
     <!-- Move to up button -->
     <div class="scroll-button">
       <a href="#home"><i class="fas fa-arrow-up"></i></a>
     </div>
-    <!-- navgaition menu -->
+    <!-- navigation menu -->
     <nav>
       <div class="navbar">
         <div class="logo"><a href="#">The Get Down.</a></div>
@@ -26,7 +30,7 @@
           <li><a href="#home">Home</a></li>
           <li><a href="#about">Mission</a></li>
           <li><a href="#skills">Questionnaire</a></li>
-          <li><a href="#services">Resources</a></li>
+          <li><a href="/maps/progmap.html">Maps and Resources</a></li>
           <!-- <li><a href="#contact">Contact</a></li> -->
           <div class="cancel-btn">
             <i class="fas fa-times"></i>
@@ -74,7 +78,7 @@
         <div class="title"><span>Our Mission</span></div>
         <div class="about-details">
           <div class="left">
-            <img src="images/about1.png" alt="" />
+            <img src="/The Get Down/Images/about1.png" alt="" />
           </div>
           <div class="right">
             <div class="topic">Where Dreams Become Homes</div>
