--- a/maps/progmap.html
+++ b/maps/progmap.html
@@ -23,16 +23,16 @@
       href="https://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
     />
+    <link rel="stylesheet" type="text/css" href="/maps/map-styles.css" />
+    <link rel="stylesheet" href="/The Get Down/style.css" />
+    <script type="text/javascript" src="/maps/mapConfig.js"></script>
+    <script type="module" src="/maps/app.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      rel="stylesheet"
-      type="text/css"
-      href="/DownPayment/maps/map-styles.css"
+      rel="icon"
+      href="/The Get Down/Images/logo-png_1.png"
+      type="image/png"
     />
-    <script
-      type="text/javascript"
-      src="/DownPayment/maps/mapConfig.js"
-    ></script>
-    <script type="module" src="/DownPayment/maps/app.js"></script>
   </head>
   <body>
     <!-- Uses the Extended Component Library (https://github.com/googlemaps/extended-component-library)
