--- a/The Get Down/index.html
+++ b/The Get Down/index.html
@@ -24,7 +24,7 @@
         <div class="logo"><a href="#">The Get Down.</a></div>
         <ul class="menu">
           <li><a href="#home">Home</a></li>
-          <li><a href="#about">Mission</a></li>
+          <li><a href="mission.html">Mission</a></li>
           <li><a href="#skills">Questionnaire</a></li>
           <li><a href="#services">Resources</a></li>
           <!-- <li><a href="#contact">Contact</a></li> -->
